namespace DominoGame.Enums;

public enum GameStatus
{
    NotStarted,
    InProgress,
    Blocked,
    Finished
}