namespace DominoGame.Enums;

public enum PlacementOrientation
{
    Horizontal,
    Vertical
}