namespace DominoGame.Enums;

public enum PlacementSide
{
    Left,
    Right
}