namespace DominoGame.Enums;

public enum TurnAction
{
    PlayDomino,
    DrawDomino,
    Skip
}