namespace DominoGame.Enums;

public enum WinCondition
{
    EmptyHand,
    FewestPips
}