namespace DominoGame.Interfaces;

public interface IDrawPile
{
    public List<IDomino> Dominoes { get; }
}