namespace DominoGame.Interfaces;

public interface IPlayer
{
    public string Name { get; }
}