classDiagram
    direction TB

    %% Associations
    GameLogic --> GameStatus
    GameLogic --> WinCondition

    %% Dependencies
    GameLogic ..> TurnAction
    GameLogic ..> PlacementSide
    GameLogic ..> PlacementOrientation
    GameLogic ..> IDomino

    %% Compositions
    GameLogic *-- IBoard
    
    %% Agregations
    IBoard o-- IDomino
    IDrawPile o-- IDomino
    GameLogic o-- IDrawPile
    GameLogic o-- IPlayer

    %% Realizations
    Domino ..|> IDomino
    Player ..|> IPlayer
    Board ..|> IBoard
    DrawPile ..|> IDrawPile

    %% Enumerations
    class GameStatus {
        NotStarted
        InProgress
        Blocked
        Finished
    }

    class PlacementSide {
        Left
        Right
    }

    class PlacementOrientation {
        Horizontal
        Vertical
    }

    class WinCondition {
        EmptyHand
        FewestPips
    }

    class TurnAction {
        PlayDomino
        DrawDomino
        Skip
    }

    %% Interfaces
    class IDomino {
        +int LeftPips
        +int RightPips
        +bool IsDouble
    }

    class IPlayer {
        +string PlayerName
    }

    class IBoard {
        +List~IDomino~ BoardDominoes
        +int LeftOpenEnd
        +int RightOpenEnd
    }

    class IDrawPile {
        +List~IDomino~ Dominoes
    }

    %% Class Concrete
    class Domino {
        +int LeftPips
        +int RightPips
        +bool IsDouble
        +Domino(int leftPips, int rightPips)
    }

    class Player {
        +string PlayerName
        +Player(string playerName)
    }

    class Board {
        +List~IDomino~ BoardDominoes
        +int LeftOpenEnd
        +int RightOpenEnd
        +Board(List~IDomino~ boardDominoes)
    }

    class DrawPile {
        +List~IDomino~ Dominoes
        +DrawPile(List~IDomino~ dominoes)
    }

    class GameLogic {
        %% Fields / Properties
        -Dictionary~IPlayer, List~IDomino~~ _hands
        -List~IPlayer~ _players
        -IBoard _board
        -IPlayer _winner
        -IDrawPile _drawPile
        -int _currentPlayerIndex
        -int _consecutiveSkips
        -GameStatus _gameStatus
        -WinCondition _winCondition

        %% Events Delegates
        +EventHandler TurnChanged
        +EventHandler GameEnded

        %% Constructors
        +GameLogic(List~IPlayer~ players, IDrawPile drawPile)

        %% Lifecycle (public)
        +StartGame() : void
        +GetWinner() : IPlayer
        +GetWinConditions() : WinCondition

        %% Actions (public)
        +PlayTurn(IPlayer player, IDomino domino, PlacementSide side, PlacementOrientation orientation) : TurnAction
        +DrawCard(IPlayer player) : void
        +AdvanceTurn() : void

        %% Get Info Game and Turn
        +GetStatus() : GameStatus
        +GetCurrentPlayer() : IPlayer
        
        %% Get Info Player and Hand
        +GetPlayers() : List~IPlayer~
        +GetPlayerHand(IPlayer player) : List~IDomino~
        +GetRemainingPips(IPlayer player) : int
        
        %% Get Info Board
        +GetBoard() : IBoard
        +GetOpenEndPips() : List~int~
        +GetDrawPileCount() : int
        +CanPlaceDomino(IDomino domino, PlacementSide side) : bool

        %% Bussines Logic Setup (Private)
        -ShuffleDrawPile() : void
        -DealInitialHands() : void
        -DetermineStartingPlayer() : void
        -GetHighestDouble(IPlayer player) : IDomino
        -HasAnyDouble() : bool
        -RedealAllHands() : void
        
        %% Bussines Logic Turn and Placement (Private)
        -ValidatePlacement(IDomino domino, PlacementSide side) : bool
        -PlaceDomino(IDomino domino, PlacementSide side, PlacementOrientation orientation) : void
        -HasPlayableDomino(IPlayer player) : bool
        
        %% Bussines Logic Pile and Hand (Private)
        -DrawFromPile() : IDomino
        -AddDominoToHand(IPlayer player, IDomino domino) : void
        -RemoveDominoFromHand(IPlayer player, IDomino domino) : void
        -DrawUntilPlayable(IPlayer player) : void
        
        %% Bussines Logic Game End and Resolution (Private)
        -CheckGameOver() : bool
        -IsGameBlocked() : bool
        -IsDrawPileEmpty() : bool
        -CalculateRemainingPips(IPlayer player) : int
        -DetermineWinner() : IPlayer
        -EndGame() : void
    }

    <<Enumeration>> GameStatus
    <<Enumeration>> PlacementSide
    <<Enumeration>> PlacementOrientation
    <<Enumeration>> WinCondition
    <<Enumeration>> TurnAction
    <<Interface>> IDomino
    <<Interface>> IPlayer
    <<Interface>> IBoard
    <<Interface>> IDrawPile



